--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^0.26.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "pakertaja": "0.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   }
